# sumo-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt  sumo_api_ingest.ipynb  sumo_api_process.ipynb  sumo_eda.ipynb
processed_data/: rikishi.csv
raw_data/: rikishi.json
