[project]
name = "sumo-ml"
version = "0.1.0"
description = "Machine learning for predicting the outcomes of sumo matches"
authors = [
    {name = "Spencer Whitehead",email = "SpencerWhitehead7@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
package-mode = false
requires-python = ">=3.13"

[tool.poetry.dependencies]
jupyterlab = "^4.3.6"
matplotlib = "^3.10.1"
numpy = "^2.2.4"
pandas = "^2.2.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.33.1"
ruff = "^0.11.2"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"] # default rulesets, plus "I" for import sorting

[tool.poe.tasks]
fmt.shell = "(ruff check --fix || true) && ruff format"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
